tests/sumo/errors/unsafe_connections/errors.sumo.agg
Warning: 1 total messages of type: Lane '%' is approached multiple times from edge '%'. This may cause collisions.
